fixed issued with qrcode image path and changed readme.md

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <main>
     <div class="card">
       <div class="imageFrame">
-        <img src="F:\qr-code-component-main\images\image-qr-code.png" alt="qrcode">
+        <img src="./images/image-qr-code.png" alt="qrcode">
       </div>
       <div class="bodyText">
         <h3>Improve your front-end skills by building projects</h3> <br>
